Split response file parser off into its own class.  More work on CFG printing.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -34,6 +34,7 @@ coflo_SOURCES = main.cpp \
 	ImprovedDFSVisitorBase.h \
 	Location.cpp Location.h \
 	Program.cpp Program.h \
+	ResponseFileParser.cpp ResponseFileParser.h \
 	RuleBase.cpp RuleBase.h \
 	RuleDFSBase.cpp RuleDFSBase.h \
 	RulePrintFunctionCFG.cpp RulePrintFunctionCFG.h \
