--- a/tests/atlocal.in
+++ b/tests/atlocal.in
@@ -22,6 +22,10 @@
 # TODO Not sure if we need something like this or not.
 PATH=@abs_builddir@:@abs_top_builddir@/src:@abs_top_srcdir@/build-aux:$top_srcdir:$srcdir:$PATH
 
+XFAILFILE=$abs_builddir/.badversion
+
+trap "test -r $XFAILFILE && cat $XFAILFILE; exit $?" 1 2 13 15
+
 # The minimum version of GCC which CoFlo needs to run.
 MIN_GCC_VERSION="4.0.0";
 
