--- a/src/controlflowgraph/statements/Makefile.am
+++ b/src/controlflowgraph/statements/Makefile.am
@@ -32,5 +32,5 @@ libstatements_a_SOURCES = statements.h \
     Switch.cpp Switch.h
 
 libstatements_a_CPPFLAGS = $(AM_CPPFLAGS)
-libstatements_a_CFLAGS = $(AM_CXXFLAGS)
+libstatements_a_CFLAGS = $(AM_CFLAGS)
 libstatements_a_CXXFLAGS = $(AM_CXXFLAGS)
