--- a/src/controlflowgraph/statements/Makefile.am
+++ b/src/controlflowgraph/statements/Makefile.am
@@ -20,9 +20,11 @@ noinst_LIBRARIES = libstatements.a
 libstatements_a_SOURCES = statements.h \
 	Entry.cpp Entry.h \
     Exit.cpp Exit.h \
+    FlowControlBase.cpp FlowControlBase.h \
     FunctionCall.cpp FunctionCall.h \
     FunctionCallResolved.cpp FunctionCallResolved.h \
     FunctionCallUnresolved.cpp FunctionCallUnresolved.h \
+    Goto.cpp Goto.h \
     If.cpp If.h \
     Merge.cpp Merge.h \
     NoOp.cpp NoOp.h \
