--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -58,9 +58,9 @@ coflo_LDADD = ./controlflowgraph/libcontrolflowgraph.a \
 	./controlflowgraph/visitors/libvisitors.a \
 	./debug_utils/libdebugutils.a \
 	./libexttools/libexttools.a \
-	/usr/local/lib/libdparse.a \
 	$(BOOST_PROGRAM_OPTIONS_LIB) $(BOOST_REGEX_LIB) $(BOOST_SYSTEM_LIB) $(BOOST_FILESYSTEM_LIB)
 
+#/usr/local/lib/libdparse.a \#
 
 SUFFIX = .g .gdebug
 
@@ -71,7 +71,6 @@ SUFFIX = .g .gdebug
 	TARGET="$(srcdir)/$$(basename "$@")" && \
 	SOURCE="$(srcdir)/$$(basename "$<")" && \
 	INTER="$(srcdir)/$$(basename "$<").gdebug" && \
-	make_dparser $(DPARSER_FLAGS) "$${SOURCE}" "--output=$${INTER}" && \
-	sed -r -e 's/\(void\*\)([a-zA-Z_][a-zA-Z0-9_]+)/static_cast<void*>\(\1\)/g' $${INTER} > $${TARGET} 
+	"$(MAKE_DPARSER)" $(DPARSER_FLAGS) "$${SOURCE}" "--output=$${INTER}" && \
+	"$(SED)" -r -e 's/\(void\*\)([a-zA-Z_][a-zA-Z0-9_]+)/static_cast<void*>\(\1\)/g' $${INTER} > $${TARGET} 
 
-# make_dparser $(DPARSER_FLAGS) -R "$${SOURCE}" > "$${INTER}" && 
